# matamata

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.Dockerfile  app_entrypoint.sh  docker-compose.yml  fly.toml  pyproject.toml  test_entrypoint.sh
.github/workflows/: run_pre_commit.yml  test_pipeline.yml
docs/: index.md  local_environment_without_docker_compose.md
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-defining-ubiquitous-language.md  0003-data-modeling.md  0004-rest-api-endpoints.md  0005-removing-redundant-data-relationship.md  0006-removing-previous-match-uuid-data.md  0007-adding-new-rest-api-endpoints-for-more-user-friendly-experience.md  0008-use-of-postgresql-and-the-impact-over-previous-data-models.md
migrations/: env.py
migrations/versions/: 0f0f741a699a_initial_tables.py  ad6bf02d324d_initial_tables.py
src/matamata/: __init__.py  database.py  main.py  schemas.py  services.py  settings.py
src/matamata/models/: __init__.py  base.py  competitor.py  constants.py  exceptions.py  match.py  tournament.py  tournament_competitor.py
src/matamata/routers/: competitor.py  match.py  tournament.py
src/matamata/services/: __init__.py  exceptions.py  register_match_result.py  start_tournament.py
tests/: conftest.py  test_app.py  test_schemas.py  test_services.py  utils.py
tests/models/: factories.py  test_competitor.py  test_match.py  test_tournament.py  test_tournament_competitor.py
tests/routers/: test_competitor.py  test_match.py  test_tournament.py
tests/services/: test_register_match_result.py  test_start_tournament.py
