[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matamata"
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "REST API for single-elimination tournament management"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/matamata"
"Bug Tracker" = "https://github.com/ayharano/matamata/issues"
