[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matamata"
dynamic = ["version"]
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "REST API for single-elimination tournament management"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[all] >=0.108.0,<1",
    "pydantic-settings >=2.1.0,<2.2",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/matamata"
"Bug Tracker" = "https://github.com/ayharano/matamata/issues"

[project.optional-dependencies]
test = [
    "pytest >=7.4.4,<7.5",
    "pytest-cov >=4.1.0,<4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.setuptools.dynamic]
version = {file = "matamata/VERSION"}
