[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matamata"
dynamic = ["version"]
authors = [
  { name="Alexandre Harano", email="email@ayharano.dev" },
]
description = "REST API for single-elimination tournament management"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn[standard] >=0.25.0,<1",
    "fastapi[all] >=0.108.0,<1",
    "pydantic-settings >=2.1.0,<2.2",
    "sqlalchemy >=2.0.25,<2.1",
    "sqlalchemy-utils >=0.41.1,<0.42",
    "alembic >=1.13.1,<1.14",
    "psycopg[binary,pool] >=3.1.17,<3.2",
]

[project.urls]
"Homepage" = "https://github.com/ayharano/matamata"
"Bug Tracker" = "https://github.com/ayharano/matamata/issues"

[project.optional-dependencies]
test = [
    "pytest >=7.4.4,<7.5",
    "pytest-cov >=4.1.0,<4.2",
    "factory-boy >=3.3.0,<3.4",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.setuptools.dynamic]
version = {file = "matamata/VERSION"}
